--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>RealEstateConsole</title>
+  <title>Snap Realty</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="/node_modules/bootstrap-social/bootstrap-social.css" rel="stylesheet">
 </head>
 <body>
   <app-root>Loading...</app-root>
